modules/gdscript/tests/scripts/Traits/analyzer/errors/trait_typed_array_invalid_assign.gd
trait SomeTrait:
	pass

class OtherClass:
	pass

func test():
	var trait_classes: Array[SomeTrait] = [OtherClass.new()]
